--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username: ''
 github_username:  daesungra
 
 # Build settings
-theme: lagrange
+# theme: lagrange
 plugins:
   - jekyll-feed
   - jekyll-paginate
