settings: Add dropdown menu config

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,6 +10,12 @@ menu:
 - {name: 'About', path: 'about', url: ''}
 - {name: 'Contact', path: 'contact', url: ''}
 
+dropdown_menu:
+- {name: '자바스크립트', path: 'js', url: ''}
+- {name: '파이썬', path: 'python', url: ''}
+- {name: '도커', path: 'docker', url: ''}
+- {name: '나무야 나무야', path: 'daily', url: ''}
+
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
 - {icon: 'github', link: 'https://www.github.com/daesungra'}
