javascript: Change category name js to javascript

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,7 +11,7 @@ menu:
 - {name: 'Contact', path: 'contact', url: ''}
 
 dropdown_menu:
-- {name: '자바스크립트', path: 'js', url: ''}
+- {name: '자바스크립트', path: 'javascript', url: ''}
 - {name: '파이썬', path: 'python', url: ''}
 - {name: '도커', path: 'docker', url: ''}
 - {name: '나무야 나무야', path: 'daily', url: ''}
