--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Namu
-author: Ra Daesung
+author: Ra-daesung
 email: daesungra@gmail.comd
 description: >- # this means to ignore newlines until "baseurl:"
   나무 개발자 블로그입니다
