--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,9 @@ defaults:
         layout: "post"
         author: "namu"
 
+markdown: kramdown
+highlighter: rouge
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
