--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,6 +14,7 @@ dropdown_menu:
 - {name: '자바스크립트', path: 'javascript', url: ''}
 - {name: '파이썬', path: 'python', url: ''}
 - {name: '도커', path: 'docker', url: ''}
+- {name: '기타', path: 'etc', url: ''}
 - {name: '나무야 나무야', path: 'daily', url: ''}
 - {name: '데미안에게', path: 'to-demian', url: ''}
 
