category: Add new category for CS

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,7 +15,8 @@ dropdown_menu:
 - {name: '파이썬', path: 'python', url: ''}
 - {name: '장고', path: 'django', url: ''}
 - {name: '도커', path: 'docker', url: ''}
-- {name: '알고리즘', path: 'algorithm', url: ''}
+- {name: '알고리즘/코테', path: 'algorithm', url: ''}
+- {name: 'CS', path: 'computer-science', url: ''}
 - {name: '잡동사니', path: 'etc', url: ''}
 - {name: '나무야 나무야', path: 'daily', url: ''}
 - {name: '데미안에게', path: 'to-demian', url: ''}
