category: Add new category for web

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,6 +17,7 @@ dropdown_menu:
 - {name: '도커', path: 'docker', url: ''}
 - {name: '알고리즘/코테', path: 'algorithm', url: ''}
 - {name: 'CS', path: 'computer-science', url: ''}
+- {name: 'WEB, HTTP', path: 'web', url: ''}
 - {name: '잡동사니', path: 'etc', url: ''}
 - {name: '나무야 나무야', path: 'daily', url: ''}
 - {name: '데미안에게', path: 'to-demian', url: ''}
