--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,7 +13,7 @@ menu:
 dropdown_menu:
 - {name: '자바스크립트', path: 'javascript', url: ''}
 - {name: '파이썬', path: 'python', url: ''}
-- {name: '장고', path: 'django', url: ''}
+- {name: '장고, 플라스크', path: 'django', url: ''}
 - {name: '도커', path: 'docker', url: ''}
 - {name: '알고리즘/코테', path: 'algorithm', url: ''}
 - {name: 'CS', path: 'computer-science', url: ''}
