--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,16 +11,16 @@ menu:
 - {name: 'Contact', path: 'contact', url: ''}
 
 dropdown_menu:
-- {name: '자바스크립트', path: 'javascript', url: ''}
-- {name: '파이썬', path: 'python', url: ''}
-- {name: '장고, 플라스크', path: 'django', url: ''}
-- {name: '도커', path: 'docker', url: ''}
-- {name: '알고리즘/코테', path: 'algorithm', url: ''}
-- {name: 'CS', path: 'computer-science', url: ''}
-- {name: 'WEB, HTTP', path: 'web', url: ''}
-- {name: '잡동사니', path: 'etc', url: ''}
-- {name: '나무야 나무야', path: 'daily', url: ''}
-- {name: '데미안에게', path: 'to-demian', url: ''}
+- {name: '자바스크립트', path: 'javascript', icon: 'javascript', url: ''}
+- {name: '파이썬', path: 'python', icon: 'python', url: ''}
+- {name: '장고, 플라스크', path: 'django', icon: 'django', url: ''}
+- {name: '도커', path: 'docker', icon: 'docker', url: ''}
+- {name: '알고리즘, 코테', path: 'algorithm', icon: 'algorithm', url: ''}
+- {name: 'CS', path: 'computer-science', icon: 'cs', url: ''}
+- {name: 'WEB, HTTP', path: 'web', icon: 'web', url: ''}
+- {name: '잡동사니', path: 'etc', icon: 'package', url: ''}
+- {name: '나무야 나무야', path: 'daily', icon: 'favicon', url: ''}
+- {name: '데미안에게', path: 'to-demian', icon: 'book', url: ''}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
